fixed styling issue with next and prev btns on mobile version

--- a/main.css
+++ b/main.css
@@ -667,7 +667,6 @@ li a:hover {
   .main #slider-section {
     height: 280px;
     width: 100%;
-    background-position: center;
     border-radius: 0;
     padding-top: 0;
     padding-left: 0;
@@ -691,21 +690,21 @@ li a:hover {
     font-weight: 600;
     letter-spacing: 0.35px;
   }
-  .main #slider-section .slider-controls-tablet-and-mobile {
+  .main #slider-section .img-description-container .slider-controls-tablet-and-mobile {
     width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    top: 50%;
+    bottom: 180%;
     padding: 0;
     left: 5%;
     background-color: transparent;
   }
-  .main #slider-section .slider-controls-tablet-and-mobile .slider-controls {
+  .main #slider-section .img-description-container .slider-controls-tablet-and-mobile .slider-controls {
     border-radius: 8px;
   }
-  .main #slider-section .slider-controls-tablet-and-mobile .slider-numeration {
+  .main #slider-section .img-description-container .slider-controls-tablet-and-mobile .slider-numeration {
     display: none;
   }
 }
